Onboarding UI complete

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  dots_indicator: ^2.0.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
@@ -20,5 +20,7 @@ dev_dependencies:
   very_good_analysis: ^2.1.2
 
 flutter:
-
+  assets:
+    - assets/onboarding.png
+  
   uses-material-design: true
